<resources>
    <string name="app_name">CryptoHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="exchanges">Exchanges</string>
    <string name="derivatives">Derivatives</string>
    <string name="rank">Rank</string>
    <string name="ticker">Ticker</string>
    <string name="price_usd">Price (USD)</string>
    <string name="_24h">24H %</string>
    <string name="market_cap">Market Cap</string>
    <string name="name">Name</string>
    <string name="coin">Coin</string>
    <string name="price_btc">Price (BTC)</string>
    <string name="search_coin">Search for a coin …</string>
    <string name="exchange">Exchange</string>
    <string name="volume_btc">Volume (BTC)</string>
    <string name="trust_score">Trust Score</string>
    <string name="open_interest">Open Interest (BTC)</string>
    <string name="open_interest_usd">Open Interest</string>
    <string name="_24h_volume_btc">24H Volume (BTC)</string>
    <string name="_24h_volume">24H Volume</string>
    <string name="pair">Pair</string>
    <string name="trust">Trust</string>
</resources>