<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.CryptoFragment"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="10">

        <TextView
            android:id="@+id/rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ticker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ticker"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price_usd"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_24h"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/marketCap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/market_cap"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="3"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/loadingBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>